# astraquant

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  ASTRAQUANT_RESEARCH_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  LICENSE  README.md  RELEASE_NOTES.md  RESEARCH.md  TRADE.md  WALKTHROUGH.md  ci_output.txt  counterfactual_delta.json  flash_crash_2010.astra_ds  flash_crash_2010_report.md  hash_trace.json  intervention_timing_study.json  pyproject.toml  railway.toml  rl_policy_report.md  test_output.txt  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deterministic_ci.yml  fuzz_runner.yml
config/: prompts.py
deploy/: Dockerfile.daemon  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  EVENT_JOURNAL_SPEC.md  EXCHANGE_RUNTIME.md  FLOATING_POINT_POLICY.md  LOB_DESIGN.md  MICROSTRUCTURE_RESEARCH.md  PORTFOLIO_ENGINE_DESIGN.md  REPLAY_OBSERVABILITY.md  RESEARCH_TOOLING.md  RISK_ENGINE_DESIGN.md  STREAM_DESIGN.md
python/: examples.py
research/: behavioral_counterfactual_delta.json  counterfactual_matrix.json  flash_crash_2010.astra_ds  lehman_2008.astra_ds  lehman_2008_report.md
results/: calibration_results.json  certification_report.md  covid_2020.astra_ds  covid_2020_merkle_audit.json  covid_2020_report.md  flash_crash_2010_merkle_audit.json  flash_crash_2010_report.md  lehman_2008_merkle_audit.json
scripts/: crash_loop_test.sh  demo_crash_recovery.sh
showcase/: dashboard.html  index.html  vercel.json
stages/: __init__.py  stage4_image.py  stage5_video.py
(+4 files in other folders)
