[workspace]
resolver = "2"
members = ["packages/astra-core", "packages/astra-ops", "packages/astra-stream", "packages/astra-lob", "packages/astra-risk", "packages/astra-portfolio", "packages/astra-exchange", "packages/astra-inspect", "packages/astra-strategy", "packages/astra-router", "packages/astra-clearing", "packages/astra-scenarios", "packages/astra-research", "packages/astra-policy", "packages/astra-benchmarks", "packages/astra-audit", "packages/astra-agents", "packages/astra-rl", "packages/astra-distributed", "packages/astra-formal", "packages/astra-federation", "packages/astra-alm", "packages/astra-perf", "packages/astra-research-api", "packages/astra-venue", "packages/astra-trade", "packages/astra-paper", "packages/astra-treasury", "packages/astra-risk-node", "packages/astra-api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AstraQuantResearch/astraquant-os"
rust-version = "1.70"
